--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 8vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
   font-size: calc(10px + 2vmin);
   color: white;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.2);
+
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+}
+.App-title {
+  padding: 1rem;
+  font-size: 3rem;
+}
+#background-video {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (min-aspect-ratio: 16/9) {
+  #background-video {
+    width: 100%;
+    height: auto;
   }
-  to {
-    transform: rotate(360deg);
+}
+@media (max-aspect-ratio: 16/9) {
+  #background-video {
+    width: auto;
+    height: 100%;
+  }
+}
+@media (max-width: 767px) {
+  #background-video {
+    display: none;
+  }
+  body {
+    background: url("https://images.unsplash.com/photo-1541966821190-704c400d10e7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8M3x8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60");
+    background-size: cover;
   }
 }
