--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -31,9 +31,32 @@
   font-size: 2rem;
 }
 #button {
-  background-color: white;
   color: black;
   size: 4rem;
+  -webkit-animation: glowing 1500ms infinite;
+  -moz-animation: glowing 1500ms infinite;
+  -o-animation: glowing 1500ms infinite;
+  animation: glowing 1500ms infinite;
+  font-weight: bold;
+  color: white;
+  transition: 0.25s;
+}
+#button:hover {
+  border-color: white;
+  box-shadow: 0 0.5em 0.5em -0.4em white;
+  transform: translateY(-0.4rem);
+  background-color: white;
+  color: black;
+}
+#button:focus {
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+}
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @-webkit-keyframes focus-in-contract-bck {
